--- a/.env
+++ b/.env
@@ -5,3 +5,5 @@ DB_USERNAME=root
 DB_PASSWORD=GILIwms_@2022
 SDP_API_KEY=EA50B121-A98B-4A95-9700-D3FFEEAFB17F
 SDP_URL=http://103.21.14.107:9004/api/v3
+TICKET_AES_KEY=G!7!IT@2025_t3chT3am
+TICKET_HMAC_KEY=D3vT3@m2025_
