--- a/.htaccess
+++ b/.htaccess
@@ -6,16 +6,16 @@
 </FilesMatch>
 
 # ========================================
-# 🔀 URL REWRITE ENGINE
+# 🔀 REWRITE ENGINE ON
 # ========================================
 Options +FollowSymLinks -MultiViews
 RewriteEngine On
 RewriteBase /GTicket/
 
 # ========================================
-# 🔐 FORCE HTTPS (proxy-friendly, GoDaddy-safe)
+# 🔐 FORCE HTTPS ONLY IF NOT ALREADY SECURE
 # ========================================
-RewriteCond %{HTTPS} off [OR]
+RewriteCond %{HTTPS} !=on
 RewriteCond %{HTTP:X-Forwarded-Proto} !https
 RewriteRule ^ https://%{HTTP_HOST}%{REQUEST_URI} [R=301,L]
 
@@ -41,21 +41,10 @@ ErrorDocument 404 /GTicket/404error.php
 # 🛡️ SECURITY HEADERS
 # ========================================
 <IfModule mod_headers.c>
-    # Prevent XSS and content injection
     Header always set Content-Security-Policy "default-src 'self'; script-src 'self'; style-src 'self'; object-src 'none'; frame-ancestors 'none';"
-
-    # Hide referrer data on cross-origin requests
     Header always set Referrer-Policy "strict-origin-when-cross-origin"
-
-    # Enforce HTTPS in browsers (HSTS)
     Header always set Strict-Transport-Security "max-age=31536000; includeSubDomains; preload"
-
-    # Block MIME-type sniffing
     Header always set X-Content-Type-Options "nosniff"
-
-    # Prevent clickjacking
     Header always set X-Frame-Options "SAMEORIGIN"
-
-    # Control resource sharing policy
     Header always set Cross-Origin-Resource-Policy "same-site"
 </IfModule>
